Introduce About and Contact sections.

--- a/front.html
+++ b/front.html
@@ -16,5 +16,10 @@
             </ul>
         </nav>
     </div>
-    <div id="about"></div>
+    <div id="about">
+        <div class="container"></div>
+    </div>
+    <div id="contact">
+        <div class="container"></div>
+    </div>
 </html>
